svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: bitwarden
spec:
  ports:
    - name: http
      port: 80
  selector:
    role: bitwarden
#  type: "LoadBalancer"
